--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
 
 <body>
 
-    <header class="header part">
+    <header class="header part-partfolio">
 
         <div class="container main ">
             <nav class="header-navigation">
