--- a/portfolio.html
+++ b/portfolio.html
@@ -167,7 +167,7 @@
 
     <!--Fooret-->
     <!--Fooret-->
-    <footer class="footer">
+    <footer class="footer ">
         <div class="container">
             <div class="footer-text">
                 <a href="./index.html">
@@ -186,37 +186,37 @@
                 </h2>
                 <div class="link-footer">
                     <ul class="social-footer">
-                        <li class="icon-footer">
-                            <a class="color" href="/" class=""></a>
-                            <svg class="footer-social" width="24" height="24">
-                                <use class="footer-href" href="./images.subgect/socmeredg-defs.svg#icon-instagram">
-                                </use>
-                            </svg>
-
+                        <li class="icon-footer list">
+                            <a class="item-color" href="/" class="">
+                                <svg class="footer-social" width="24" height="24">
+                                    <use class="footer-href" href="./images.subgect/socmeredg-defs.svg#icon-instagram">
+                                    </use>
+                                </svg>
+                            </a>
                         </li>
-                        <li class="icon-footer">
-                            <a href="/" class=""></a>
-                            <svg class="footer-social" width="24" height="24">
-                                <use href="./images.subgect/socmeredg-defs.svg#icon-twitter">
-                                </use>
-                            </svg>
-
+                        <li class="icon-footer list">
+                            <a class="item-color" href="/" class="">
+                                <svg class="footer-social" width="24" height="24">
+                                    <use href="./images.subgect/socmeredg-defs.svg#icon-twitter">
+                                    </use>
+                                </svg>
+                            </a>
                         </li>
-                        <li class="icon-footer">
-                            <a href="/" class="team-link link"></a>
-                            <svg class="footer-social" width="24" height="24">
-                                <use href="./images.subgect/socmeredg-defs.svg#icon-facebook">
-                                </use>
-                            </svg>
-
+                        <li class="icon-footer list">
+                            <a class="item-color" href="/" class="team-link link">
+                                <svg class="footer-social" width="24" height="24">
+                                    <use href="./images.subgect/socmeredg-defs.svg#icon-facebook">
+                                    </use>
+                                </svg>
+                            </a>
                         </li>
-                        <li class="icon-footer">
-                            <a href="/" class=""></a>
-                            <svg class="footer-social" width="24" height="24">
-                                <use href="./images.subgect/socmeredg-defs.svg#icon-linkedin">
-                                </use>
-                            </svg>
-
+                        <li class="icon-footer list">
+                            <a class="item-color" href="/" class="">
+                                <svg class="footer-social" width="24" height="24">
+                                    <use href="./images.subgect/socmeredg-defs.svg#icon-linkedin">
+                                    </use>
+                                </svg>
+                            </a>
                         </li>
                     </ul>
                 </div>
